# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.79 2009/12/13 12:51:13 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.6 (2009/??/??)
 - (2009/12/13) Fixed bug#4393 - AgentTicketQueue - Small view takes long to load.
 - (2009/12/09) Fixed crash in Ascii2Html() if no scalar reference is given.
 - (2009/12/09) Fixed bug#4551 - GenericAgent appends leading zeros to dates
    if TimeInputFormat is "Input".
 - (2009/12/09) Fixed bug#4584 - Auto response does not use selected from e-mail
    address.
 - (2009/12/09) Fixed bug#4435 - Inline attachments break in some scenarios like
    AgentTicketCompose and AgentTicketForward.
 - (2009/12/09) Fixed bug#4556 - Translation "Accounted Time" to german "Zugewiesene Zeit".
 - (2009/12/09) Fixed bug#4184 - Can't call method "NotificationGet" on
    an undefined value.
 - (2009/12/09) Fixed bug#4371 - DataSelected value for
    PreferencesGroups###WatcherNotify doesn't work
 - (2009/12/09) Fixed bug#4486 - Some preferences displayed in AdminUser are not correct.
 - (2009/12/09) Fixed bug#4363 - Layout.pm -> PageNavBar() mistakes because of
    missing checks and descriptions
 - (2009/12/08) Fixed bug#4361 - Umlauts in Dashboard are not displayed correcty
    after refresh on non-unicode databases.
 - (2009/12/08) Fixed bug# 4323 - Customer Interface shows last customer article
    instead of last article.
 - (2009/12/08) Fixed bug#4384 - Customer User Info not deleted when From in
    AgentTicketPhone is changed.
 - (2009/12/08) Fixed bug#4482 - Owner update possible with no new owner set.
 - (2009/12/07) Fixed bug#4246 - Response Templates fail to populate for certain
    email tickets.
 - (2009/12/07) Fixed bug#4381 - Function change_selection in AgentTicketMove.