@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.79 2009/12/13 12:51:13 martin Exp $
+# $Id: CHANGES,v 1.993.2.80 2009/12/21 10:27:07 mn Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/12/16) Fixed bug#4503 - Border around image does not display well
+    in some email clients.
  - (2009/12/13) Fixed bug#4393 - AgentTicketQueue - Small view takes long to load.
  - (2009/12/09) Fixed crash in Ascii2Html() if no scalar reference is given.
  - (2009/12/09) Fixed bug#4551 - GenericAgent appends leading zeros to dates
